[package]
name = "ch32v307-rs"
version = "0.0.0"
authors = ["zhang <zjie5163@gmail.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
rust-version = "1.59"

[dependencies]
cty = "0.2.2"
panic-halt = "0.2.0"
riscv-rt = "0.12.2"


# this lets you use `cargo fix`!
[[bin]]
name = "ch32v307-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[build-dependencies]
bindgen = "0.69.4"
